--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-livereload-plugin": "^0.11.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "cors": "^2.8.3",
     "express": "^4.15.2",
     "lodash": "^4.17.4",
