--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prop-types": "^15.5.9",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-gravatar": "^2.6.3",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
