--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "watch": "webpack -w",
     "sfs": "node ./dist/server/statics.js --cache 0",
     "bff": "node ./dist/server/server.js",
-    "start": "concurrently --kill-others \"npm run sfs\" \"npm run bff\" \"npm run watch\""
+    "start": "concurrently --kill-others \"npm run sfs\" \"npm run bff\" \"npm run watch\"",
+    "test": "jest",
+    "test:fix": "jest -u",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +29,7 @@
     "concurrently": "^3.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.1",
+    "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.7.1",
@@ -34,6 +39,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "jest": "20.0.0",
     "jsdom": "^10.1.0",
+    "identity-obj-proxy": "^3.0.0",
     "react-test-renderer": "^15.5.4",
     "rimraf": "^2.6.1",
     "serve": "^5.1.5",
@@ -55,5 +61,11 @@
     "redux": "^3.6.0",
     "redux-form": "^6.7.0",
     "redux-thunk": "^2.2.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   }
 }
