--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "eslint-plugin-jsx-a11y": "^3.0.2 || ^4.0.0",
     "eslint-plugin-react": "^6.9.0",
     "extract-text-webpack-plugin": "^2.1.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "20.0.0",
     "jsdom": "^10.1.0",
-    "identity-obj-proxy": "^3.0.0",
+    "nock": "^9.0.13",
     "react-test-renderer": "^15.5.4",
+    "redux-mock-store": "^1.2.3",
     "rimraf": "^2.6.1",
     "serve": "^5.1.5",
     "style-loader": "^0.17.0",
@@ -51,6 +53,7 @@
     "babel-polyfill": "^6.23.0",
     "cors": "^2.8.3",
     "express": "^4.15.2",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.9",
     "react": "^15.5.4",
