--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "babel-polyfill": "^6.23.0",
     "cors": "^2.8.3",
     "express": "^4.15.2",
+    "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.9",
@@ -63,12 +64,14 @@
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-form": "^6.7.0",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.2.0"
   },
   "jest": {
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "identity-obj-proxy"
-    }
+    },
+    "setupTestFrameworkScriptFile":"<rootDir>/__mocks__/localStorageMock.js"
   }
 }
