--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "babel-polyfill": "^6.23.0",
     "cors": "^2.8.3",
     "express": "^4.15.2",
-    "immutable": "^3.8.1",
+    "immutable": "4.0.0-rc.2",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.9",
