--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "cors": "^2.8.3",
+    "crypto": "0.0.3",
     "express": "^4.15.2",
     "immutable": "4.0.0-rc.2",
     "isomorphic-fetch": "^2.2.1",
