--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "express": "^4.15.2",
     "immutable": "4.0.0-rc.2",
     "isomorphic-fetch": "^2.2.1",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.9",
     "react": "^15.5.4",
